<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="info_dino_icon">Ikon Dino</string>
    <string name="info_dino_name">Nama Dinosaurus</string>
    <string name="info_dino_desc">Deskripsi</string>
    <string name="info_dino_characteristic">Karakteristik</string>
    <string name="info_dino_habitat">Asal</string>
    <string name="info_dino_kelompok">Family</string>
    <string name="info_dino_makanan">Tipe Makanan</string>
    <string name="info_dino_panjang">Panjang</string>
    <string name="info_dino_tinggi">Tinggi</string>
    <string name="info_dino_bobot">Bobot</string>
    <string name="info_dino_kelemahan">Kelemahan</string>
    <string name="myname">Rifqi Haikal Chairiansyah</string>
    <string name="myemail">r.haikal1610@gmail.com</string>
    <string-array name="dinos_name">
        <item>Theropoda</item>
        <item>Sauropoda</item>
        <item>Stegosauridae</item>
        <item>Hadrosauridae</item>
        <item>Ceratopsidae</item>
        <item>Ankylosauridae</item>
        <item>Ornithomimidae</item>
        <item>Pterosauria</item>
    </string-array>
    <string-array name="dinos_icon">
        <item>@drawable/theo</item>
        <item>@drawable/sauro</item>
        <item>@drawable/stego</item>
        <item>@drawable/hadro</item>
        <item>@drawable/cera</item>
        <item>@drawable/anky</item>
        <item>@drawable/orni</item>
        <item>@drawable/ptero</item>
    </string-array>
    <string-array name="dinos_description">
        <item>Keluarga ini mencakup dinosaurus pemakan daging seperti Tyrannosaurus rex dan Velociraptor</item>
        <item>Keluarga ini terdiri dari dinosaurus raksasa berleher panjang seperti Brachiosaurus dan Diplodocus.</item>
        <item>Keluarga ini dikenal dengan ciri khas punggung berderetkan piring-piring tulang, contohnya adalah Stegosaurus.</item>
        <item>Keluarga ini mencakup dinosaurus bertubuh besar dengan paruh seperti bebek, seperti Parasaurolophus dan Edmontosaurus.</item>
        <item>Keluarga ini terdiri dari dinosaurus dengan tanduk dan lempengan-lempegan pada kepala, seperti Triceratops</item>
        <item>Keluarga ini memiliki perlindungan tubuh yang kuat dan cenderung berlapis, contohnya adalah Ankylosaurus.</item>
        <item>Keluarga ini terdiri dari dinosaurus berwujud mirip burung dan memiliki kaki panjang, seperti Ornithomimus</item>
        <item>Meskipun bukan dinosaurus sejati, keluarga ini mencakup reptil terbang seperti Pteranodon dan Quetzalcoatlus yang hidup pada masa yang sama dengan dinosaurus.</item>
    </string-array>
    <string-array name="dinos_characteristic">
        <item>Dinosaurs pemakan daging dengan cakar tajam, gigi runcing, dan postur tubuh yang ramping untuk berburu dan menyerang mangsa.</item>
        <item>Dinosaurus raksasa berleher panjang dengan tubuh besar, kaki yang kuat, dan ekor yang panjang. Biasanya memiliki gigi yang rata untuk mengunyah tanaman.</item>
        <item>Dikenal dengan punggung berderetkan piring-piring tulang yang digunakan untuk pertahanan dan regulasi suhu tubuh. Tubuhnya relatif kecil dibandingkan dengan sauropoda.</item>
        <item>Dinosaurus bertubuh besar dengan paruh seperti bebek untuk mengunyah tanaman. Biasanya membentuk kawanan dan memiliki kemampuan bergerak yang baik</item>
        <item> Dinosaurus dengan tanduk dan lempengan pada kepala yang digunakan untuk pertahanan dan mungkin juga sebagai alat komunikasi. Tubuhnya cenderung besar dengan kaki yang kuat</item>
        <item>Dinosaurus dengan perlindungan tubuh yang kuat dan berlapis, termasuk tulang atau lempengan yang menonjol untuk melindungi diri dari predator.</item>
        <item>Dinosaurs berwujud mirip burung dengan kaki panjang untuk berlari cepat. Paruhnya biasanya tidak memiliki gigi dan digunakan untuk mencabut tanaman atau mengambil serangga.</item>
        <item>Meskipun bukan dinosaurus sejati, mereka adalah reptil terbang dengan sayap membran dan sering memiliki tanduk atau crested pada tengkoraknya</item>
    </string-array>
    <string-array name="dinos_habitat">
        <item>Tersebar di berbagai habitat seperti hutan, padang rumput, dan daerah bersemak, terutama di Amerika Utara, Asia, dan Eropa.</item>
        <item>Umumnya hidup di daerah dataran rendah, padang rumput, hutan-hutan, dan daerah berair, tersebar di berbagai wilayah di dunia, terutama Amerika Utara, Amerika Selatan, dan Eropa</item>
        <item>Daerah dataran rendah, hutan-hutan, dan padang rumput, terutama di Amerika Utara dan Eropa pada periode Jurassic hingga Cretaceous.</item>
        <item>Daerah dataran rendah, padang rumput, hutan-hutan, dan wilayah berair, terutama di Amerika Utara dan Asia pada periode Cretaceous.</item>
        <item> Daerah dataran rendah, padang rumput, hutan-hutan, dan wilayah berair, terutama di Amerika Utara dan Asia pada periode Cretaceous.</item>
        <item> Daerah dataran rendah, hutan-hutan, padang rumput, dan wilayah berbatu, tersebar di berbagai wilayah di dunia pada periode Cretaceous.</item>
        <item> Padang rumput, daerah bersemak, dan hutan terbuka, tersebar di Amerika Utara, Asia, dan Eropa pada periode Cretaceous.</item>
        <item>Umumnya hidup di daerah pantai, wilayah berair, dan hutan-hutan dekat dengan air, tersebar di berbagai wilayah di dunia pada periode Mesozoikum.</item>
    </string-array>
    <string-array name="thero_name">
        <item>Velociraptor</item>
        <item>Tyrannosaurus Rex</item>
        <item>Spinosaurus</item>
        <item>Ornithropus</item>
        <item>Compsognatus</item>
        <item>Carnotaurus</item>
        <item>Allosaurus</item>
    </string-array>
    <string-array name="thero_image">
        <item>@drawable/c1_velo</item>
        <item>@drawable/c1_trex</item>
        <item>@drawable/c1_spino</item>
        <item>@drawable/c1_orni</item>
        <item>@drawable/c1_comp</item>
        <item>@drawable/c1_carno</item>
        <item>@drawable/c1_allo</item>
    </string-array>
    <string-array name="thero_description">
        <item>
            Velociraptor adalah dinosaurus predator berukuran sedang dengan tubuh yang ramping dan kaki panjang.
            Mereka memiliki ciri khas cakar kuku yang tajam dan kepala yang relatif kecil dengan mata yang besar.
        </item>
        <item>
            T-rex adalah salah satu dinosaurus predator terbesar yang pernah hidup.
            Mereka memiliki tubuh besar, kepala besar dengan gigi tajam yang cocok untuk merobek daging,
            dan kaki belakang yang kuat untuk berlari dan mengejar mangsa
        </item>
        <item> Spinosaurus adalah dinosaurus predator yang memiliki ciri khas sail atau perahu layar di punggungnya.
            Mereka memiliki tubuh yang besar dengan kaki kuat dan cakar tajam di tangan dan kaki
        </item>
        <item>Ornithomimus adalah dinosaurus berukuran sedang yang memiliki tubuh ramping, kaki panjang,
            dan kepala kecil dengan paruh mirip burung.
        </item>
        <item>Compsognathus adalah dinosaurus kecil dengan tubuh yang ramping dan kaki panjang. Mereka adalah dinosaurus
            predator berukuran kecil yang hidup pada masa Jurassic hingga Cretaceous
        </item>
        <item>Carnotaurus adalah dinosaurus predator berukuran sedang dengan tubuh yang ramping, kepala yang besar dengan
            gigi tajam, dan cakar yang kuat di tangan
        </item>
        <item>Allosaurus adalah dinosaurus predator besar yang hidup pada periode Jurassic. Mereka memiliki tubuh yang kuat,
            kepala besar dengan gigi tajam, dan lengan depan yang lebih panjang daripada T-rex.
        </item>
    </string-array>
    <string-array name="thero_characteristic">
        <item>
            Velociraptor dikenal karena kecerdasan mereka dalam berburu dan kerja sama dalam kelompok. Mereka juga memiliki
            kemampuan berlari yang cepat dan fleksibilitas tinggi dalam mencari makanan.
        </item>
        <item>
            Ciri khas T-rex termasuk rahang yang sangat kuat, gigi yang tajam, dan lengan depan yang pendek dengan cakar yang
            kuat. Mereka juga memiliki postur yang tegak dengan ekor yang panjang untuk menjaga keseimbangan saat berlari.
        </item>
        <item>
            Spinosaurus adalah dinosaurus semi-aquatic yang sering ditemukan dekat air. Mereka memanfaatkan kemampuan berenang
            dan mungkin memburu ikan serta hewan-hewan air lainnya, selain juga menjadi predator darat yang tangguh.
        </item>
        <item>
            Ornithomimus adalah dinosaurus herbivora yang berlari dengan cepat dan mungkin menggunakan kecepatan mereka untuk
            menghindari predator. Mereka memiliki cakar yang kecil dan tidak tajam, menunjukkan bahwa mereka tidak digunakan untuk berburu.
        </item>
        <item>
            Compsognathus memiliki ciri khas rahang yang lebar dengan gigi kecil, cocok untuk memangsa mangsa kecil seperti
            serangga, kadal kecil, dan hewan-hewan kecil lainnya. Mereka juga mungkin hidup dalam kelompok kecil.
        </item>
        <item>
            Ciri khas Carnotaurus adalah tanduk kecil di atas mata mereka dan lengan depan yang sangat pendek bahkan untuk ukuran dinosaurus
            predator. Mereka kemungkinan mengandalkan kecepatan dan kekuatan gigitan mereka dalam berburu.
        </item>
        <item>
            Allosaurus adalah pemburu yang cakap dan seringkali memanfaatkan ukuran tubuhnya untuk menyerang mangsa yang
            lebih kecil. Mereka juga mungkin berburu dalam kelompok kecil untuk meningkatkan keberhasilan dalam mencari makanan.
        </item>
    </string-array>
    <string-array name="thero_habitat">
        <item>
            Velociraptor hidup di daerah yang sebagian besar merupakan padang rumput atau hutan terbuka pada periode Cretaceous di
            wilayah Asia Tengah dan Mongolia. Habitatnya mungkin mencakup dataran rendah, tepi sungai, dan daerah bersemak.
        </item>
        <item>
            T-rex hidup di wilayah yang sebagian besar merupakan dataran atau hutan dataran rendah yang luas di Amerika Utara
            pada periode Cretaceous. Habitatnya mencakup padang rumput, hutan rawa, dan daerah dengan keanekaragaman hayati yang tinggi.
        </item>
        <item>
            Spinosaurus adalah dinosaurus semi-aquatic yang hidup di daerah yang terkait dengan air seperti sungai, danau, dan
            rawa-rawa pada periode Cretaceous di wilayah Afrika dan bagian lain dari Gondwana.
        </item>
        <item>
            Ornithomimus hidup di daerah yang sebagian besar datar dan luas, termasuk padang rumput dan dataran rendah, pada periode
            Cretaceous di Amerika Utara dan Asia. Habitatnya mungkin mencakup daerah dengan vegetasi yang cukup untuk menyediakan makanan.
        </item>
        <item>
            Compsognathus hidup di daerah yang sebagian besar datar atau berbukit-bukit pada periode Jurassic hingga Cretaceous di wilayah
            Eropa, khususnya di Jerman dan Prancis. Habitatnya mungkin mencakup hutan-hutan terbuka dan padang rumput.
        </item>
        <item>
            Carnotaurus hidup di daerah dataran rendah yang luas, termasuk padang rumput dan hutan terbuka pada periode Cretaceous di
            Amerika Selatan, khususnya di wilayah yang sekarang menjadi Argentina. Habitatnya mungkin mencakup daerah-daerah dengan sumber air yang cukup dan vegetasi yang memadai.
        </item>
        <item>
            Allosaurus hidup di wilayah daratan yang luas pada periode Jurassic, terutama di Amerika Utara dan Eropa. Habitatnya mencakup dataran tinggi, hutan-hutan berbatu,
            dan daerah dengan sumber air yang cukup.
        </item>
    </string-array>
</resources>