<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="7dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="30sp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="885dp"
        android:layout_height="match_parent"
        android:elevation="13dp"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivItemDino"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/info_dino_icon"
            app:srcCompat="@drawable/theo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvItemDino"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/info_dino_name"
            android:textColor="#50623A"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="269dp"
        android:layout_height="68dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvItemsDino"
            android:layout_width="255dp"
            android:layout_height="73dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/info_dino_desc"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
